--- a/src/main/resources/c2-config.properties
+++ b/src/main/resources/c2-config.properties
@@ -34,7 +34,8 @@ sysMgt.oauth2sso.synValidate=false
 anonUrl.login =/oauth2/user_info_syn
 datasouce=server
 
-msg_url=http://10.20.30.175/erp/jsonAddSMS.jspx
+#msg_url=http://10.20.30.175/erp/jsonAddSMS.jspx
+msg_url = http://10.20.30.175:8280/erp/jsonAddSMS.jspx
 msg_userno=zharui
 msg_sessionid=4807BCEF99F3A4F2BD0067C43670A3FC
 msg_psw=4807BCEF99F3A4F2BD0067C43670A3FC
