--- a/.classpath
+++ b/.classpath
@@ -23,12 +23,16 @@
 	<classpathentry kind="lib" path="E:/runtime-EclipseApplication-c2/jars/poi-ooxml-3.14-20160307.jar"/>
 	<classpathentry kind="lib" path="E:/runtime-EclipseApplication-c2/jars/poi-ooxml-schemas-3.14-20160307.jar"/>
 	<classpathentry kind="lib" path="E:/runtime-EclipseApplication-c2/jars/poi-scratchpad-3.14-20160307.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="D:/maven/repository/com/chinacreator/c2/ilsApi/1.0.0/ilsApi-1.0.0.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7">
+		<attributes>
+			<attribute name="owner.project.facets" value="java"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
