--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -169,8 +169,8 @@
 <filter-mapping>
 	<filter-name>shiroOAuth2SSOFilter</filter-name>
 	<url-pattern>/*</url-pattern>
-</filter-mapping> -->
-
+</filter-mapping>
+ -->
   <servlet>
     <servlet-name>ExcelController</servlet-name>
     <servlet-class>com.unlcn.ils.tps.excel.ExcelController</servlet-class>
