--- a/src/main/resources/c2-config.properties
+++ b/src/main/resources/c2-config.properties
@@ -18,20 +18,20 @@ c2.desb.registry.cachefile=/home/administrator/cache/tps/aa.cache
 c2.desb.monitor.interval=60000
 
 #\u5BA2\u6237\u7AEFID
-sysMgt.oauth2sso.clientId=1585A9C8C2BC4F04A4C481595EA9BB74
+#sysMgt.oauth2sso.clientId=1585A9C8C2BC4F04A4C481595EA9BB74
 #\u5BA2\u6237\u7AEF\u5B89\u5168KEY
-sysMgt.oauth2sso.clientSecret=D7BC1D5CCB434C8CB1BEBC7FD1966ACF
+#sysMgt.oauth2sso.clientSecret=D7BC1D5CCB434C8CB1BEBC7FD1966ACF
 #oauth2\u7EDF\u4E00\u8BA4\u8BC1\u6388\u6743\u670D\u52A1\u5668\u5730\u5740
-sysMgt.oauth2sso.serverUrl=http://rd.unlcn.com/sso
+#sysMgt.oauth2sso.serverUrl=http://rd.unlcn.com/sso
 #oauth2\u7EDF\u4E00\u8BA4\u8BC1\u6388\u6743\u670D\u52A1\u5668\u5185\u90E8\u5730\u5740\uFF0C\u5982\u679C\u4E3A\u7A7A\uFF0C\u5219\u4F7F\u7528sysMgt.oauth2sso.serverUrl\u9879\u7684\u503C
-sysMgt.oauth2sso.serverInnerUrl=http://10.20.30.113:8080/sso
+#sysMgt.oauth2sso.serverInnerUrl=http://10.20.30.113:8080/sso
 
 #\u5BA2\u6237\u7AEF\u5730\u5740
-sysMgt.oauth2sso.clientUrl=http://rd.unlcn.com/tps
+#sysMgt.oauth2sso.clientUrl=http://rd.unlcn.com/tps
 
-sysMgt.oauth2sso.synValidate=false
+#sysMgt.oauth2sso.synValidate=false
 
-anonUrl.login =/oauth2/user_info_syn
+#anonUrl.login =/oauth2/user_info_syn
 datasouce=server
 
 #msg_url=http://10.20.30.175/erp/jsonAddSMS.jspx
